force-app/main/default/objects/sugati__Activity_Delivery__c/sugati__Activity_Delivery__c.object-meta.xml
<CustomObject>
    <label>Activity Delivery</label>
    <nameField>
        <displayFormat>AcDel-{00000000}</displayFormat>
        <label>Activity Delivery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>