force-app/main/default/objects/sugati__Activity_Delivery__c/fields/sugati__S_AD_Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AD_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is the supplier still delivering this activity?</description>
    <inlineHelpText>Is the supplier still delivering this activity?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>