force-app/main/default/objects/sugati__Activity_Delivery__c/fields/sugati__S_AD_Activity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AD_Activity__c</fullName>
    <description>The Activity being delivered</description>
    <inlineHelpText>The Activity being delivered</inlineHelpText>
    <label>Activity</label>
    <referenceTo>sugati__Activity__c</referenceTo>
    <relationshipLabel>Activity Deliveries</relationshipLabel>
    <relationshipName>Activity_Deliveries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>