force-app/main/default/objects/sugati__Activity_Delivery__c/fields/sugati__S_AD_Adult_Pricing_Age__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AD_Adult_Pricing_Age__c</fullName>
    <description>Anyone equal to or above this age will be considered as an adult by the supplier and charge accordingly.</description>
    <inlineHelpText>Anyone equal to or above this age will be considered as an adult by the supplier and charge accordingly.</inlineHelpText>
    <label>Adult Pricing Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>