force-app/main/default/objects/sugati__Activity_Delivery__c/fields/sugati__S_AD_Default_Capacity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AD_Default_Capacity__c</fullName>
    <description>Default maximum number of Pax that can be booked. Can be overridden at the Availability level.</description>
    <inlineHelpText>Default maximum number of Pax that can be booked. Can be overridden at the Availability level.</inlineHelpText>
    <label>Default Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>