force-app/main/default/objects/sugati__Activity_Delivery__c/fields/sugati__S_AD_Minimum_Age__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AD_Minimum_Age__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Anyone whose age is under this value is not allowed to be booked on this activity.</description>
    <inlineHelpText>Anyone whose age is under this value is not allowed to be booked on this activity.</inlineHelpText>
    <label>Minimum Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>