force-app/main/default/objects/sugati__Activity_Delivery__c/fields/sugati__S_AD_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AD_Supplier__c</fullName>
    <description>The supplier delivering the Activity</description>
    <inlineHelpText>The supplier delivering the Activity</inlineHelpText>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Activity Deliveries</relationshipLabel>
    <relationshipName>Activity_Deliveries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>