force-app/main/default/objects/sugati__Activity_Delivery__c/fields/sugati__S_AD_Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AD_Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main Contact for this activity</description>
    <inlineHelpText>Main Contact for this activity</inlineHelpText>
    <label>Supplier Contact</label>
    <referenceTo>sugati__Supplier_Contact__c</referenceTo>
    <relationshipLabel>Activity Deliveries</relationshipLabel>
    <relationshipName>Activity_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>