force-app/main/default/objects/sugati__Activity_Delivery__c/fields/sugati__S_AD_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_AD_Supplier_Name__c</fullName>
    <formula>sugati__S_AD_Supplier__r.Name</formula>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>